# Automated_Planning

./: .gitignore  Dockerfile  README.md
.apptainer/cache/blob/: index.json
.planutils/: packages  settings.json
Planners/Problem 1/: domain_1.pddl  domain_seismic.pddl  problem_1.pddl  problem_seismic.pddl  sas_plan  setup1.txt
Planners/Problem 2/: domain_2.pddl  problem_2.pddl  sas_plan  setup2.txt
Planners/Problem 3/: domain_3-problem_3.psas  domain_3.hddl  problem3_solution.txt  problem_3.hddl  setup3.txt
Planners/Problem 4/: domain_4.pddl  domain_4_seismic.pddl  gantt  plan_problem_4.pddl.SOL  problem_4.pddl  problem_4.pddl.plan  problem_4_seismic.pddl  problem_4_seismic.pddl.plan  problem_4_solution_optic.txt  setup4.txt
plansys2_ws/src/imv_problem_5/: CMakeLists.txt  package.xml
plansys2_ws/src/imv_problem_5/launch/: solution.launch.py
plansys2_ws/src/imv_problem_5/pddl/: domain_4.pddl  setup_problem.txt
plansys2_ws/src/imv_problem_5/src/: cool_down_action_node.cpp  drop_fragile_action_node.cpp  drop_secure_action_node.cpp  load_pod_action_node.cpp  move_action_node.cpp  pick_up_fragile_action_node.cpp  pick_up_secure_action_node.cpp  unload_pod_fragile_action_node.cpp  unload_pod_secure_action_node.cpp
